reports/CombiningMaps.log
Traceback (most recent call last):
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\44781\anaconda3\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "c:\users\44781\anaconda3\envs\ons-env\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from MapUtils import *
------------------

Traceback [1;36m(most recent call last)[0m:

[0m  File [0;32m~\anaconda3\envs\ons-env\lib\site-packages\IPython\core\interactiveshell.py:3433[0m in [0;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)[0m

[1;36m  Cell [1;32mIn[1], line 1[1;36m
[1;33m    from MapUtils import *[1;36m

[1;36m  File [1;32m~\Documents\GitHub\PesticideDocs\MapUtils.py:65[1;36m[0m
[1;33m    postcode_df.to_csv(postcode_to_region.csv")[0m
[1;37m                                               ^[0m
[1;31mSyntaxError[0m[1;31m:[0m EOL while scanning string literal

SyntaxError: EOL while scanning string literal (MapUtils.py, line 65)

